<resources>
    <string name="app_name">Andruino</string>

    <string name="hint_phone_number">Enter Phone Number</string>

    <string name="hint_verification_code">Verification Code</string>

    <string name="start_phone_auth">Start</string>

    <string name="verify_phone_auth">Verify</string>

    <string name="resend_phone_auth">Resend</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <color name="bg">#C0C0C0</color>
</resources>
